order/k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-service
spec:
  gateways:
  - my-geateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: "/orders"
    route:
    - destination:
        host: order-service
        port:
          number: 80
